--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,35 +22,44 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13", "3.13t"]
-        os: ["macos-13", "ubuntu-latest", "windows-latest", "macos-14"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13", "3.13t", "3.14-dev"]
+        os: ["macos-13", "ubuntu-latest", "ubuntu-24.04-arm", "windows-latest", "macos-14"]
         numpy-version: [">=1.26.4,<2", ">=2.1"]
         exclude:
-          # Only test NumPy2 on 3.12 for now
+          # Only test NumPy2 on 3.12 and 3.13 for now
           - numpy-version: ">=2.1"
             python-version: "3.9"
           - numpy-version: ">=2.1"
             python-version: "3.10"
           - numpy-version: ">=2.1"
             python-version: "3.11"
-          - numpy-version: ">=2.1"
-            python-version: "3.13"
           # Do not test with NumPy 1 on free-threaded Python
           - numpy-version: ">=1.26.4,<2"
             python-version: "3.13t"
           # No pre-compiled Python 3.13, fails while compiling NumPy
           - os: "macos-13"
             python-version: "3.13"
+          # No free-threaded Python on Macos
           - os: "macos-13"
             python-version: "3.13t"
-          # No pre-compiled Python 3.13, fails while compiling NumPy
-          - os: "macos-14"
-            python-version: "3.13"
           - os: "macos-14"
             python-version: "3.13t"
           # No free-threaded Python on Windows
           - os: "windows-latest"
             python-version: "3.13t"
+          # No precompiled Numpy 1 for Python 3.13 on Windows
+          - os: "windows-latest"
+            numpy-version: ">=1.26.4,<2"
+          # Only test 3.14-dev on Ubuntu
+          - os: "windows-latest"
+            python-version: "3.14-dev"
+          - os: "macos-13"
+            python-version: "3.14-dev"
+          - os: "macos-14"
+            python-version: "3.14-dev"
+          - os: "ubuntu-24.04-arm"
+            python-version: "3.14-dev"
+
 
     runs-on: ${{ matrix.os }}
 
