--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,13 +22,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13", "3.13t", "3.14-dev"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.13t", "3.14-dev"]
         os: ["macos-13", "ubuntu-latest", "ubuntu-24.04-arm", "windows-latest", "macos-14"]
         numpy-version: [">=1.26.4,<2", ">=2.1"]
         exclude:
           # Only test NumPy2 on 3.12 and 3.13 for now
-          - numpy-version: ">=2.1"
-            python-version: "3.9"
           - numpy-version: ">=2.1"
             python-version: "3.10"
           - numpy-version: ">=2.1"
