--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -147,3 +147,21 @@ jobs:
           auto-push: true
       - name: Copy previous file to cache
         run: mkdir -p cache && cp benchmark/output_float_scalar.json cache/
+      - name: Run complex fixed scalar benchmark
+        run: cd benchmark && pytest ci_cfixed_scalar_benchmarks.py --benchmark-warmup=on --benchmark-warmup-iterations=1 --benchmark-json output_cfixed_scalar.json
+        # Run `github-action-benchmark` action
+      - name: Store float scalar benchmark result
+        uses: benchmark-action/github-action-benchmark@d48d326b4ca9ba73ca0cd0d59f108f9e02a381c7  # v1.20.4
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+        with:
+          name: APyTypes Complex Fixed-Point Scalar Benchmarks
+          # What benchmark tool the output.txt came from
+          tool: 'pytest'
+          # Where the output from the benchmark tool is stored
+          output-file-path: benchmark/output_cfixed_scalar.json
+          # GitHub API token to make a commit comment
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          # Push and deploy GitHub pages branch automatically
+          auto-push: true
+      - name: Copy previous file to cache
+        run: mkdir -p cache && cp benchmark/output_cfixed_scalar.json cache/
