--- a/.github/workflows/tests-32-bits.yml
+++ b/.github/workflows/tests-32-bits.yml
@@ -1,4 +1,4 @@
-name: Unit tests (32-bit build)
+name: Unit tests (32-bit build + coverage)
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.number }}-${{ github.event.ref }}
   cancel-in-progress: true
@@ -26,12 +26,35 @@ jobs:
         python-version: "3.10"
     - name: Install dependencies
       run: |
+        sudo apt-get install -yy lcov
         python -m pip install --upgrade pip
-        python -m pip install pytest
+        python -m pip install pytest-cov gcovr ninja meson-python numpy setuptools_scm
     - name: Install APyTypes
       run: |
         git fetch --tags
-        python -m pip install .[test] -v --config-settings=setup-args="-Dlimb_size=32"
+        export CPPFLAGS='-O0 --coverage -fprofile-abs-path'
+        python -m pip install --no-deps --no-build-isolation -v --editable . --config-settings=setup-args="-Dlimb_size=32"
+        unset CPPFLAGS
     - name: Test with pytest
       run: |
-        pytest --color=yes lib/test
+        pytest lib/test --cov-report=xml --cov=lib --log-level=DEBUG --color=yes
+    - name: Format coverage data
+      if: ${{ !cancelled()}}
+      run: |
+        lcov --rc branch_coverage=1 --rc geninfo_unexecuted_blocks=1 \
+          --ignore-errors mismatch,mismatch --ignore-errors unused \
+          --ignore-errors mismatch --capture --directory . \
+          --output-file coverage.info
+        lcov --rc branch_coverage=1 --rc geninfo_unexecuted_blocks=1 \
+          --ignore-errors mismatch,mismatch --ignore-errors unused \
+          --ignore-errors mismatch --extract coverage.info $PWD/src/'*'
+        lcov --rc branch_coverage=1 --rc geninfo_unexecuted_blocks=1 \
+          --ignore-errors mismatch,mismatch --ignore-errors unused \
+          --ignore-errors mismatch --list coverage.info
+        find . -name '*.gc*' -delete
+        # gcovr --xml-pretty --exclude-unreachable-branches --print-summary -o cobertura.xml --root $PWD
+    - name: Upload coverage reports to Codecov
+      if: ${{ !cancelled()}}
+      uses: codecov/codecov-action@0565863a31f2c772f9f0395002a31e3f06189574  # v5.4.0
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
