--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -19,7 +19,8 @@ jobs:
       - uses: actions/setup-python@42375524e23c412d93fb67b49958b491fce71c38  # v5.4.0
         with:
           python-version: "3.10"
-      - uses: nickg/setup-nvc-ci@40dcbd31cf07b60479a31f94a5df70c0bfbb9ce5  # v1v1
+      # - uses: nickg/setup-nvc@40dcbd31cf07b60479a31f94a5df70c0bfbb9ce5  # v1v1
+      - uses: nickg/setup-nvc@master
         with:
           version: latest
       - name: Check simulator installation
