--- a/.github/workflows/tests-cocotb.yml
+++ b/.github/workflows/tests-cocotb.yml
@@ -28,7 +28,8 @@ jobs:
       with:
         fetch-depth: 0
         persist-credentials: false
-    - uses: nickg/setup-nvc-ci@40dcbd31cf07b60479a31f94a5df70c0bfbb9ce5  # v1v1
+    # - uses: nickg/setup-nvc@40dcbd31cf07b60479a31f94a5df70c0bfbb9ce5  # v1v1
+    - uses: nickg/setup-nvc@master  # v1v1
       with:
         version: latest
     - name: Check simulator installation
