--- a/.github/workflows/stub-and-doctests.yml
+++ b/.github/workflows/stub-and-doctests.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install numpy nanobind pytest typing-extensions ruff
+        python -m pip install numpy "nanobind==2.4" pytest typing-extensions ruff
     - name: Install APyTypes
       run: |
         git fetch --tags
