Lint and pre-commit changes
- Replace typos with codespell and fix spelling
- Add some lint rules and fix consequences
- Fix some documentation lint rules (but not enough to enable them)

--- a/.github/workflows/stub-and-doctests.yml
+++ b/.github/workflows/stub-and-doctests.yml
@@ -38,6 +38,8 @@ jobs:
         command: |
           ./stubgen.sh
           ruff format lib/apytypes/*.pyi
+          ruff check --fix
+          git diff
     - name: Test with doctest
       run: |
         python -m doctest lib/apytypes/_apytypes.pyi lib/apytypes/_array_functions.py lib/apytypes/_utils.py  lib/apytypes/vhdl.py
