--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,12 +9,14 @@ repos:
     - id: check-merge-conflict
     - id: check-toml
     - id: end-of-file-fixer
-  - repo: https://github.com/crate-ci/typos
-    rev: v1.30.2
+  - repo: https://github.com/codespell-project/codespell
+    rev: v2.4.1
     hooks:
-    - id: typos
+      - id: codespell
+        additional_dependencies:
+          - tomli
   - repo: https://github.com/pre-commit/mirrors-clang-format
-    rev: v20.1.0
+    rev: v20.1.4
     hooks:
     - id: clang-format
   - repo: https://github.com/igorshubovych/markdownlint-cli
@@ -32,7 +34,7 @@ repos:
     - id: text-unicode-replacement-char
   - repo: https://github.com/astral-sh/ruff-pre-commit
     # Ruff version.
-    rev: v0.11.2
+    rev: v0.11.8
     hooks:
       # Run the linter.
       - id: ruff
