--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,12 +36,12 @@ docs = [
     "furo>=2024",
     "matplotlib>=3.7",
     "numpydoc>=1.7",
-    "setuptools<70",          # Pin to get around limitation in m2r2
+    "setuptools>=70",
     "sphinx>=7",
     "sphinx_copybutton>=0.5",
     "sphinx_gallery>=0.16",
     "m2r2",
-    "docutils<=0.20",         # Pin to get around limitation in m2r2
+    "docutils",
     "numpy>=1.25",
     "scipy",
     "cocotb>=1.9.1",
