--- a/.github/workflows/run_coverage.yml
+++ b/.github/workflows/run_coverage.yml
@@ -10,14 +10,14 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
+  linux:
     strategy:
       fail-fast: false
       matrix:
         python-version: ["3.10"]
+        os: ["ubuntu-latest", "ubuntu-24.04-arm"]
 
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4.2.2
       with:
@@ -56,6 +56,65 @@ jobs:
           --ignore-errors mismatch --list coverage.info
         find . -name '*.gc*' -delete
         # gcovr --xml-pretty --exclude-unreachable-branches --print-summary -o cobertura.xml --root $PWD
+    - name: Upload coverage reports to Codecov
+      if: ${{ !cancelled()}}
+      uses: codecov/codecov-action@18283e04ce6e62d37312384ff67231eb8fd56d24  # v5.4.3
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
+  macos-14:
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.10"]
+        os: ["macos-13", "macos-14"]
+
+    runs-on: ${{ matrix.os }}
+    steps:
+    - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4.2.2
+      with:
+        fetch-depth: 0
+        persist-credentials: false
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065  # v5.6.0
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        brew update
+        # Periodically, Homebrew updates Python and fails to overwrite the
+        # existing not-managed-by-Homebrew copy without explicitly being told
+        # to do so. GitHub/Azure continues to avoid fixing their runner images:
+        # https://github.com/actions/runner-images/issues/9966
+        # so force an overwrite even if there are no Python updates.
+        # We don't even care about Homebrew's Python because we use the one
+        # from actions/setup-python.
+        for python_package in $(brew list | grep python@); do
+          brew unlink ${python_package}
+          brew link --overwrite ${python_package}
+        done
+        # Workaround for https://github.com/actions/runner-images/issues/10984
+        brew uninstall --ignore-dependencies --force pkg-config@0.29.2
+        brew install ninja
+        python -m pip install --upgrade pip
+        python -m pip install pytest-cov gcovr ninja meson-python numpy setuptools_scm
+    - name: Install APyTypes
+      run: |
+        git fetch --tags
+        export CPPFLAGS='-fprofile-instr-generate=default.%m.profraw'
+        export CPPFLAGS="$CPPFLAGS -fcoverage-mapping -O0"
+        python -m pip install --no-deps --no-build-isolation -v --editable .
+        unset CPPFLAGS
+    - name: Test with pytest
+      run: |
+        pytest lib/test --cov-report=xml --cov=lib --log-level=DEBUG --color=yes
+    - name: Format coverage data
+      if: ${{ !cancelled()}}
+      run: |
+            xcrun llvm-profdata merge -sparse default.*.profraw \
+              -o default.profdata
+            xcrun llvm-cov export -format="lcov" build/*/*.so \
+              -instr-profile default.profdata > info.lcov
     - name: Upload coverage reports to Codecov
       if: ${{ !cancelled()}}
       uses: codecov/codecov-action@18283e04ce6e62d37312384ff67231eb8fd56d24  # v5.4.3
