Set default permissions for actions

--- a/.github/workflows/stub-and-doctests.yml
+++ b/.github/workflows/stub-and-doctests.yml
@@ -2,6 +2,8 @@ name: Stub and doc tests
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.number }}-${{ github.event.ref }}
   cancel-in-progress: true
+permissions:
+  contents: read
 
 on:
   push:
