--- a/.github/workflows/tests-min-deps.yml
+++ b/.github/workflows/tests-min-deps.yml
@@ -12,6 +12,9 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.event.number }}-${{ github.event.ref }}
   cancel-in-progress: true
 
+permissions:
+  contents: read
+
 on:
   push:
     branches: [ "main" ]
