--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,43 +25,38 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.10", "3.11", "3.12", "3.13", "3.13t", "3.14-dev"]
-        os: ["macos-13", "ubuntu-latest", "ubuntu-24.04-arm", "windows-latest", "macos-14"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.13t", "3.14-dev", "3.14t-dev"]
+        os: [ubuntu-latest, ubuntu-24.04-arm, windows-latest, macos-13, macos-14] # macos-15, windows-11-arm,
         numpy-version: [">=1.26.4,<2", ">=2.1"]
         exclude:
-          # Only test NumPy2 on 3.12 and 3.13 for now
-          - numpy-version: ">=2.1"
+          # Only Python 3.13 and later for windows-11-arm
+          - os: "windows-11-arm"
             python-version: "3.10"
-          - numpy-version: ">=2.1"
+          - os: "windows-11-arm"
             python-version: "3.11"
+          - os: "windows-11-arm"
+            python-version: "3.12"
           # Do not test with NumPy 1 on free-threaded Python
           - numpy-version: ">=1.26.4,<2"
             python-version: "3.13t"
-          # No pre-compiled Python 3.13, fails while compiling NumPy
-          - os: "macos-13"
-            python-version: "3.13"
-          # No free-threaded Python on Macos
+          - numpy-version: ">=1.26.4,<2"
+            python-version: "3.14t-dev"
+          # Do not test with NumPy 1 on 3.14
+          - numpy-version: ">=1.26.4,<2"
+            python-version: "3.14-dev"
+          # No numpy 1 on windows-11-arm
+          - os: windows-11-arm
+            numpy-version: ">=1.26.4,<2"
+          # No free-threaded Python on Macos 13
           - os: "macos-13"
             python-version: "3.13t"
-          - os: "macos-14"
-            python-version: "3.13t"
+          - os: "macos-13"
+            python-version: "3.14t-dev"
           # No free-threaded Python on Windows
           - os: "windows-latest"
             python-version: "3.13t"
-          # No precompiled Numpy 1 for Python 3.13 on Windows
           - os: "windows-latest"
-            python-version: "3.13"
-            numpy-version: ">=1.26.4,<2"
-          # Only test 3.14-dev on Ubuntu
-          - os: "windows-latest"
-            python-version: "3.14-dev"
-          - os: "macos-13"
-            python-version: "3.14-dev"
-          - os: "macos-14"
-            python-version: "3.14-dev"
-          - os: "ubuntu-24.04-arm"
-            python-version: "3.14-dev"
-
+            python-version: "3.14t-dev"
 
     runs-on: ${{ matrix.os }}
 
@@ -80,16 +75,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
     - name: Install NumPy
-      if: matrix.python-version != '3.13t'
       run: |
         python -m pip install 'numpy${{ matrix.numpy-version }}'
     - name: Install NumPy
-      if: matrix.python-version == '3.13t'
+      if: contains(matrix.python-version, 'dev')
       run: |
-        python -m pip install \
-            --pre \
-            --index-url https://pypi.anaconda.org/scientific-python-nightly-wheels/simple \
-            --upgrade --only-binary=:all: 'numpy${{ matrix.numpy-version }}'
+        python -m pip install --pre --index-url https://pypi.anaconda.org/scientific-python-nightly-wheels/simple --upgrade --only-binary=:all: 'numpy${{ matrix.numpy-version }}'
     - name: Install APyTypes
       run: |
         git fetch --tags
