Add CSV import and export of bit patterns

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ docs = [
     "cocotb>=1.9.1",
 ]
 test = ["numpy>=1.25", "pytest>=8.2"]
-test_hdl = ["numpy>=1.25", "pytest>=8.2", "cocotb>=1.9.1"]
+test_hdl = ["numpy>=1.25", "pytest>=8.2", "cocotb>=1.9.1", "vunit-hdl"]
 dev = ["nanobind>=2.8.0"]
 benchmark = ["numpy>=1.25", "pytest>=8.2", "pytest-benchmark"]
 comparison = [
