--- a/.github/workflows/tests-cocotb.yml
+++ b/.github/workflows/tests-cocotb.yml
@@ -1,5 +1,5 @@
 #
-# This workflow will run the APyTypes test suite including the cocotb and VHDL generation examples.
+# This workflow will run the APyTypes test suite including the cocotb, VHDL generation, and VUnit tests.
 #
 # For more information see:
 # https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
@@ -38,6 +38,9 @@ jobs:
     - name: Check simulator installation
       run: |
         nvc --version # Make sure nvc was installed successfully
+    - name: Install nvc packages
+      run: |
+        nvc --install osvvm vunit
     - name: Set up Python 3.10
       uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065  # v5.6.0
       with:
@@ -45,7 +48,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pytest numpy meson-python setuptools_scm cocotb pytest-cov ninja
+        python -m pip install pytest numpy meson-python setuptools_scm cocotb pytest-cov ninja vunit-hdl
     - name: Install APyTypes
       run: |
         git fetch --tags
