--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,7 +26,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.10", "3.11", "3.12", "3.13", "3.13t", "3.14-dev", "3.14t-dev"]
-        os: [ubuntu-latest, ubuntu-24.04-arm, windows-latest, macos-13, macos-14] # macos-15, windows-11-arm,
+        os: [ubuntu-latest, ubuntu-24.04-arm, windows-latest, macos-13, macos-14, macos-15] # windows-11-arm,
         numpy-version: [">=1.26.4,<2", ">=2.1"]
         exclude:
           # Only Python 3.13 and later for windows-11-arm
@@ -78,7 +78,7 @@ jobs:
     - name: Install NumPy
       run: |
         python -m pip install 'numpy${{ matrix.numpy-version }}'
-    - name: Install NumPy
+    - name: Install development NumPy
       if: contains(matrix.python-version, 'dev')
       run: |
         python -m pip install --pre --index-url https://pypi.anaconda.org/scientific-python-nightly-wheels/simple --upgrade --only-binary=:all: 'numpy${{ matrix.numpy-version }}'
@@ -86,12 +86,11 @@ jobs:
       run: |
         git fetch --tags
         python -m pip install .[test] -v
-    - name: Test with pytest
-      if: matrix.python-version == '3.13t'
+    - name: Test with pytest (free-threaded)
+      if: contains(matrix.python-version, 't')
       run: |
         export PYTHON_GIL=0
         pytest --color=yes lib/test
     - name: Test with pytest
-      if: matrix.python-version != '3.13t'
       run: |
         pytest --color=yes lib/test
