--- a/.github/workflows/wasm.yml
+++ b/.github/workflows/wasm.yml
@@ -40,5 +40,48 @@ jobs:
       - uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02  # v4.6.2
         with:
           name: cibw-wheels-wasm
-          path: ./pyodide-dist/*.whl
+          path: pyodide-dist/*.whl
           if-no-files-found: error
+
+  test_wasm:
+    name: Test Wasm wheels
+    needs: build_wasm
+    runs-on: ubuntu-24.04
+    strategy:
+      fail-fast: false
+      matrix:
+        pyodide-version: ["0.27.7", "0.28.2"]
+        node-version: ["24.9.0"]
+        python-version: ["3.12"]
+
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4.2.2
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-node@1d0ff469b7ec7b3cb9d8673fde0c81c44821de2a # v4.2.0
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - uses: actions/setup-python@42375524e23c412d93fb67b49958b491fce71c38 # v5.4.0
+        with:
+          python-version: 3.12
+
+      - uses: pyodide/pyodide-actions/download-pyodide@012fa537869d343726d01863a34b773fc4d96a14 # v2
+        with:
+          version: ${{ matrix.pyodide-version }}
+          to: pyodide-dist
+
+      - uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
+        with:
+          name: cibw-wheels-wasm
+          path: pyodide-dist
+
+      - name: Run tests with Pyodide in Node.js
+        run: |
+          zip -r pyodide-dist/pyodide-home.zip pyproject.toml lib 1> /dev/null
+          python -m http.server -d pyodide-dist &
+          p=$!; while ! nc -z localhost 8000; do sleep 1; done; echo ready$pid $p$
+          cp lib/test/run.mts pyodide-dist/run.mts
+          cd pyodide-dist
+          node run.mts
