--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,7 +25,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.10", "3.11", "3.12", "3.13", "3.13t", "3.14-dev", "3.14t-dev"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.13t", "3.14", "3.14t"]
         os: [ubuntu-latest, ubuntu-24.04-arm, windows-latest, macos-13, macos-14, macos-15] # windows-11-arm,
         numpy-version: [">=1.26.4,<2", ">=2.1"]
         exclude:
@@ -40,10 +40,10 @@ jobs:
           - numpy-version: ">=1.26.4,<2"
             python-version: "3.13t"
           - numpy-version: ">=1.26.4,<2"
-            python-version: "3.14t-dev"
+            python-version: "3.14t"
           # Do not test with NumPy 1 on 3.14
           - numpy-version: ">=1.26.4,<2"
-            python-version: "3.14-dev"
+            python-version: "3.14"
           # No numpy 1 on windows-11-arm
           - os: windows-11-arm
             numpy-version: ">=1.26.4,<2"
@@ -51,12 +51,12 @@ jobs:
           - os: "macos-13"
             python-version: "3.13t"
           - os: "macos-13"
-            python-version: "3.14t-dev"
+            python-version: "3.14t"
           # No free-threaded Python on Windows
           - os: "windows-latest"
             python-version: "3.13t"
           - os: "windows-latest"
-            python-version: "3.14t-dev"
+            python-version: "3.14t"
 
     runs-on: ${{ matrix.os }}
 
