--- a/.github/workflows/run_coverage.yml
+++ b/.github/workflows/run_coverage.yml
@@ -34,7 +34,7 @@ jobs:
       run: |
         sudo apt-get install -yy lcov
         python -m pip install --upgrade pip
-        python -m pip install pytest-cov gcovr ninja meson-python numpy setuptools_scm
+        python -m pip install pytest-cov gcovr ninja "meson<=1.9.1" meson-python numpy setuptools_scm
     - name: Install APyTypes
       run: |
         git fetch --tags
@@ -70,7 +70,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.10"]
-        os: ["macos-13", "macos-14"]
+        os: ["macos-14", "macos-15-intel"]
 
     runs-on: ${{ matrix.os }}
     steps:
@@ -101,7 +101,7 @@ jobs:
         brew uninstall --ignore-dependencies --force pkg-config@0.29.2
         brew install ninja
         python -m pip install --upgrade pip
-        python -m pip install pytest-cov gcovr ninja meson-python numpy setuptools_scm
+        python -m pip install pytest-cov gcovr ninja "meson<=1.9.1" meson-python numpy setuptools_scm
     - name: Install APyTypes
       run: |
         git fetch --tags
