--- a/.github/workflows/tests-cocotb.yml
+++ b/.github/workflows/tests-cocotb.yml
@@ -49,7 +49,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install pytest numpy meson-python setuptools_scm cocotb pytest-cov ninja vunit-hdl
+        python -m pip install pytest numpy "meson<=1.9.1" meson-python setuptools_scm cocotb pytest-cov ninja vunit-hdl
     - name: Install APyTypes
       run: |
         git fetch --tags
