--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,7 +26,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.10", "3.11", "3.12", "3.13", "3.13t", "3.14", "3.14t"]
-        os: [ubuntu-latest, ubuntu-24.04-arm, windows-latest, macos-13, macos-14, macos-15] # windows-11-arm,
+        os: [ubuntu-latest, ubuntu-24.04-arm, windows-latest, macos-14, macos-15, macos-15-intel] # windows-11-arm,
         numpy-version: [">=1.26.4,<2", ">=2.1"]
         exclude:
           # Only Python 3.13 and later for windows-11-arm
