Update pytest output and add documentation about third-party array libraries

--- a/.github/workflows/run_coverage.yml
+++ b/.github/workflows/run_coverage.yml
@@ -13,12 +13,12 @@ on:
     branches: [ "main" ]
 
 jobs:
-  linux:
+  linux_arm:
     strategy:
       fail-fast: false
       matrix:
         python-version: ["3.10"]
-        os: ["ubuntu-latest", "ubuntu-24.04-arm"]
+        os: ["ubuntu-24.04-arm"]
 
     runs-on: ${{ matrix.os }}
     steps:
@@ -35,6 +35,60 @@ jobs:
         sudo apt-get install -yy lcov
         python -m pip install --upgrade pip
         python -m pip install pytest-cov gcovr ninja "meson<=1.9.1" meson-python numpy setuptools_scm
+    - name: Install APyTypes
+      run: |
+        git fetch --tags
+        export CPPFLAGS='-O0 --coverage -fprofile-abs-path'
+        python -m pip install --no-deps --no-build-isolation -v --editable .
+        unset CPPFLAGS
+    - name: Test with pytest
+      run: |
+        pytest lib/test --cov-report=xml --cov=lib --log-level=DEBUG --color=yes
+    - name: Format coverage data
+      if: ${{ !cancelled()}}
+      run: |
+        lcov --rc branch_coverage=1 --rc geninfo_unexecuted_blocks=1 \
+          --ignore-errors mismatch,mismatch --ignore-errors unused \
+          --ignore-errors mismatch --capture --directory . \
+          --output-file coverage.info
+        lcov --rc branch_coverage=1 --rc geninfo_unexecuted_blocks=1 \
+          --ignore-errors mismatch,mismatch --ignore-errors unused \
+          --ignore-errors mismatch --extract coverage.info $PWD/src/'*'
+        lcov --rc branch_coverage=1 --rc geninfo_unexecuted_blocks=1 \
+          --ignore-errors mismatch,mismatch --ignore-errors unused \
+          --ignore-errors mismatch --list coverage.info
+        find . -name '*.gc*' -delete
+        # gcovr --xml-pretty --exclude-unreachable-branches --print-summary -o cobertura.xml --root $PWD
+    - name: Upload coverage reports to Codecov
+      if: ${{ !cancelled()}}
+      uses: codecov/codecov-action@671740ac38dd9b0130fbe1cec585b89eea48d3de  # v5.5.2
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
+  linux_third_party:
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.10"]
+        os: ["ubuntu-latest"]
+
+    runs-on: ${{ matrix.os }}
+    steps:
+    - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8  # v6.0.1
+      with:
+        fetch-depth: 0
+        persist-credentials: false
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@83679a892e2d95755f2dac6acb0bfd1e9ac5d548  # v6.1.0
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        sudo apt-get install -yy lcov
+        python -m pip install --upgrade pip
+        python -m pip install pytest-cov gcovr ninja "meson<=1.9.1" meson-python numpy setuptools_scm
+        python -m pip install jax tensorflow
+        python -m pip install torch==2.3.1+cpu -f https://download.pytorch.org/whl/torch_stable.html
     - name: Install APyTypes
       run: |
         git fetch --tags
