--- a/.github/workflows/tests-32-bits.yml
+++ b/.github/workflows/tests-32-bits.yml
@@ -32,7 +32,7 @@ jobs:
       run: |
         sudo apt-get install -yy lcov
         python -m pip install --upgrade pip
-        python -m pip install pytest-cov gcovr ninja "meson<=1.9.1" meson-python numpy setuptools_scm
+        python -m pip install pytest-cov gcovr ninja "meson>=1.10.1" meson-python numpy setuptools_scm
     - name: Install APyTypes
       run: |
         git fetch --tags
@@ -95,7 +95,7 @@ jobs:
         brew uninstall --ignore-dependencies --force pkg-config@0.29.2
         brew install ninja
         python -m pip install --upgrade pip
-        python -m pip install pytest-cov gcovr ninja "meson<=1.9.1" meson-python numpy setuptools_scm
+        python -m pip install pytest-cov gcovr ninja "meson>=1.10.1" meson-python numpy setuptools_scm
     - name: Install APyTypes
       run: |
         git fetch --tags
