--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ comparison = [
 
 [build-system]
 build-backend = 'mesonpy'
-requires = ['meson<=1.9.1', 'meson-python>=0.16', 'setuptools_scm>=8.1']
+requires = ['meson>=1.10.1', 'meson-python>=0.16', 'setuptools_scm>=8.1']
 
 [tool.meson-python.args]
 install = ['--skip-subprojects']
